--- a/Ch_09_Starter/Packages/manifest.json
+++ b/Ch_09_Starter/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.17.7",
-    "com.unity.ide.rider": "3.0.18",
-    "com.unity.ide.visualstudio": "2.0.17",
-    "com.unity.ide.vscode": "1.2.5",
-    "com.unity.test-framework": "1.1.33",
+    "com.unity.ai.navigation": "1.1.4",
+    "com.unity.collab-proxy": "2.0.5",
+    "com.unity.ide.rider": "3.0.24",
+    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.test-framework": "1.3.7",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.2",
+    "com.unity.timeline": "1.8.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
